@@ -87,6 +87,7 @@ Version 1.5
  - Issue #954 - Add Popp Radiator Thermostat to config from daniarv (Nechry)
  - Add Aeotec ZW121 LED Strip (Nechry)
  - Issue #947 - Add install_name to the library on OSX from irundaia (Justin)
+ - Add Aeotec ZW130 WallMote Quad (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
